SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2 -Wall")


AUX_SOURCE_DIRECTORY(./ TEST_SRCS)
ADD_EXECUTABLE(test ${TEST_SRCS})

TARGET_LINK_LIBRARIES( test nap )
TARGET_LINK_LIBRARIES( test pthread )

INCLUDE_DIRECTORIES( ../src/ )


file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/cases
    DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
